--- a/phoenix-sass-example/assets/css/app.scss
+++ b/phoenix-sass-example/assets/css/app.scss
@@ -1,5 +1,11 @@
 /* This file is for your main application CSS */
-@import "./phoenix.css";
+@import "./phoenix.scss";
+
+$primary-color: red;
+
+h1 {
+  color: $primary-color
+}
 
 /* Alerts and form errors used by phx.new */
 .alert {
